fix scaling on mobile

--- a/main.css
+++ b/main.css
@@ -57,6 +57,7 @@ html {
 
 body {
     margin: 0;
+    padding: 0;
 }
 
 .header {
@@ -82,7 +83,7 @@ body {
     margin: 0 3.5em;
 }
 
-#icons>a>img{
+#icons>a>img {
     transition-duration: 200ms;
 }
 
@@ -296,7 +297,7 @@ h3.inline {
     /* text-align: center; */
     margin: 0.5em auto -3em auto;
     padding: 2em 0;
-    min-height: 62ex;
+    min-height: calc(100% - 0px);
     width: 100%;
     position: relative;
 }
@@ -311,10 +312,19 @@ h3.inline {
     transform: skewY(-8deg);
 }
 
+.footer {
+    position: absolute;
+    bottom: 0;
+}
+
 .section.footer {
     min-height: 0ex;
     height: 4em;
+    z-index: 0;
 
+    min-height: 0;
+    position: absolute;
+    bottom: 0;
 }
 
 .section.footer a {
@@ -344,6 +354,14 @@ h3.inline {
     margin: 0 auto;
     position: relative;
     padding: 4ex 0;
+    z-index: 2;
+}
+
+.title.section-content {
+    position: absolute;
+    z-index: 2;
+    top: calc(50% - 320px);
+    top: max(0, 50% - 320px);
 }
 
 .blue .section-content div {
@@ -818,3 +836,32 @@ h3.inline {
     position: absolute;
     top: 169px;
 }
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #D9E9EB;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #B6E4ED;
+}
+
+::-webkit-scrollbar-track {
+    background: #FFFFFF;
+    border-radius: 10px;
+    box-shadow: inset 7px 10px 12px 0px #F0F0F0;
+}
+
+
+/* Mobile Support */
+
+@media only screen and (max-width: 600px) {
+    body {
+      
+    }
+  }
